--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -23,11 +23,11 @@
               <h5 class="mb-4 text-center" onclick="addInputs()" style="color: white;">Don't have an account?</h5>
               <form action="/user/login" method="post" class="signin-form form">
                 <div class="form-group">
-                    <input name="email" id="email-field" type="email" class="form-control" placeholder="Email">
+                    <input name="email" id="email-field" type="email" class="form-control" placeholder="Email" value="saafad@gmail.com">
                 </div>
                 <p id="errp" class="text-center text-danger"></p>
                 <div class="form-group">
-                    <input name="password" id="password-field" type="password" class="form-control" placeholder="Password">
+                    <input name="password" id="password-field" type="password" class="form-control" placeholder="Password" value="safad">
                     <span toggle="#password-field" class="fa fa-fw fa-eye field-icon toggle-password"></span>
                 </div>
                 <p id="errp2" class="text-center text-danger"></p>
