--- a/views/admin/nav/ordermanagment.ejs
+++ b/views/admin/nav/ordermanagment.ejs
@@ -22,7 +22,7 @@
                   <td><%= order.orderId.toString() %></td>
                  
                   <td><%= new Date(order.createdAt).toLocaleDateString() %></td>
-                  <td><%= order.total.toFixed(2) %></td>
+                  <td><%= Math.floor(order.total) %></td>
                   <td>
                       <select class="form-select delivery-status" 
                               id="delivery<%= order.orderId.toString() %>_<%= order.productId %>"
