--- a/views/user/wishlist.ejs
+++ b/views/user/wishlist.ejs
@@ -12,7 +12,7 @@
                     <div class="item-content">
                         <div class="item-image">
                             <a href="/user/product/<%= product.name %>">
-                                <img src="<%= product.image0 %>" alt="<%= product.name %>" />
+                                <img src="<%= product.images[0] %>" alt="<%= product.name %>" />
                             </a>
                         </div>
                         <div class="item-details">
